--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ h1{
 }
 
 header {
+    
     border: 3px solid yellow;
-    background-color:pink;
+    background-color:#F25081;
 
 }
 header div{
@@ -30,20 +31,23 @@ nav a{
 /* move to the end of the container */
 .sections_of_website section{
     display:flex;
-    width:70%;
+    width:95%;
     margin:10px;
     border:2px dashed whitesmoke;
 }
 h2{
+    display:flex;
+    justify-content:flex-end;
+    width:15%;
     border:2px dotted purple;
     margin:5px;
 }
 /* content class will have a left border  */
 .content{
-    width:60%;
+    width:80%;
     margin:10px;
     padding:15px;
-    display:flex;
+    /* display:flex; */ 
     border-style: double double double solid;
     border-left-color: aqua;
 
@@ -54,29 +58,88 @@ h2{
     margin-top:.5rem;
 }
 
-.icon-github{
-    -webkit-mask-image:url(https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png);
+/* .icon-github{ */
+    /* -webkit-mask-image:url(https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png);
     mask-image: url(https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png);
-}
+} */
 .icon_gmail{
     -webkit-mask-image:(https://lh3.googleusercontent.com/0rpHlrX8IG77awQMuUZpQ0zGWT7HRYtpncsuRnFo6V3c8Lh2hPjXnEuhDDd-OsLz1vua4ld2rlUYFAaBYk-rZCODmi2eJlwUEVsZgg);
     mask-image: url(https://lh3.googleusercontent.com/0rpHlrX8IG77awQMuUZpQ0zGWT7HRYtpncsuRnFo6V3c8Lh2hPjXnEuhDDd-OsLz1vua4ld2rlUYFAaBYk-rZCODmi2eJlwUEVsZgg);
 }
-.social_contacts .icon{
+.social_contacts img{
     display:block;
-    height:21px;
-    width:21px;
+    height:24px;
+    width:24px;
 
 }
-.icon{
+/* .icon{
     background-color:pink;
     mask-position:center;
     mask-repeat:no-repeat;
-}
+} */
 ul{
     list-style:none;
     display:flex;
 }
 main{
+   
     border:2px solid yellow;
 }
+.sections_of_website img{
+    max-height: 200px;
+    border:2px solid lavender;
+    margin:5px;
+
+}
+.project_pic{
+    width:100%;
+    
+
+}
+.section_1, .section_2{
+    display:flex;
+
+}
+.primary_image{
+    opacity:0.5;
+    position: relative;
+
+}
+.section_1{
+    position:relative;
+}
+.section_2{
+    position:relative;
+}
+.first_text{
+    background-color: blueviolet;
+    padding:10px;
+    position:absolute;
+    bottom:20px;
+    left:5px;
+}
+.first_text_ofsecomdary_image{
+    background-color: blueviolet;
+    padding:10px;
+    position:absolute;
+    bottom:20px;
+    left:480px;
+}
+
+
+.primary_image:hover{
+    opacity: initial;
+}
+
+
+@media screen and (max-width: 600px) {
+    .section_1, .section_2{
+        display:block;
+    
+    }
+  }
+  
+
+/* CREATE A CARD DISPLAY FOR THE IMAGES FOR WHEN THE WEBSITE IS RESIZED */
+/* Create a fading effect for the pictures and add a text box to the image */
+/* yellow box figure out the spacing */
