--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ h2{
     width:15%;
     border:2px dotted purple;
     margin:5px;
+    background-image: url("./Assets/geomet.jpg");
+    background-size: contain;
 }
 /* content class will have a left border  */
 .content{
