fixed bugs for the labels on pictures withing the sibling div or work div

--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ main{
     position: relative;
 
 }
+.primary_image {
+    position:relative;
+}
 .section_1{
     position:relative;
 }
@@ -127,6 +130,7 @@ main{
     bottom:20px;
     left:480px;
 }
+
 
 
 .project_pic:hover{
