--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav{
 
 nav a{
     padding:5px;
-    text-decoration:underline;
+    text-decoration:underline 2px;
 }
 
 /* move to the end of the container */
@@ -58,6 +58,8 @@ h2{
 }
 .social_contacts{
     display:flex;
+    justify-content:center;
+    
     gap:1rem;
     margin-top:.5rem;
 }
@@ -111,7 +113,10 @@ main{
 .project_pic{
     opacity:0.5;
     position: relative;
-
+}
+.project_pic1{
+    opacity:0.5;
+    position:relative;
 }
 .primary_image {
     position:relative;
@@ -145,6 +150,9 @@ main{
 
 .project_pic:hover{
     opacity: initial;
+}
+.project_pic1:hover{
+    opacity:initial;
 }
 
 
