--- a/style.css
+++ b/style.css
@@ -107,38 +107,42 @@ main{
 .sections_of_website img{
     max-height: 200px;
     border:2px solid lavender;
-    margin:5px;
+  
 
 }
 .project_pic{
     width:100%;
+    margin:5px;
 }
 .project_pic1{
     width:47%;
     height:100%;
     object-fit:contains;
+    opacity:0.5;
+    position:relative;
+    margin:5px;
 }
 
 .project_pic{
     opacity:0.5;
     position: relative;
 }
-.project_pic1{
+.project_pic2{
     opacity:0.5;
     position:relative;
 }
+
 .primary_image {
     position:relative;
     display:flex;
+    width:100%
 }
 
-.primary_image1{
-    position:relative;
-    width:1000px;
-}
+
 .section_1{
     position:relative;
-    margin:10px;
+    margin:5px;
+    width:500px;
  
 }
 .section_2{
@@ -158,8 +162,8 @@ main{
     background-color: blueviolet;
     position:absolute;
     padding:10px;
-    bottom:20px;
-    left:5px;
+    bottom:20%;
+    left:.5%;
 }
 
 
@@ -169,6 +173,9 @@ main{
     opacity: initial;
 }
 .project_pic1:hover{
+    opacity:initial;
+}
+.project_pic2:hover{
     opacity:initial;
 }
 
