--- a/style.css
+++ b/style.css
@@ -1,215 +1,214 @@
 /* setting flex property to header */
 header {
-    display:flex; 
-    justify-content:space-between;
-    border: 3px solid #930dc1;
-    background-color:#e10458;
+  display: flex;
+  justify-content: space-between;
+  border: 3px solid #930dc1;
+  background-color: #e10458;
 }
-h1{
-    margin:10px;
+h1 {
+  margin: 10px;
 }
 /* assigning the width of the div within the header */
-.name_tag, .nav_container{ 
-    margin:10px;   
-    width:40%;
-    border:2px solid;
-    background-color: #b60386;
+.name_tag,
+.nav_container {
+  margin: 10px;
+  width: 40%;
+  border: 2px solid;
+  background-color: #b60386;
 }
 /* Makes the nav portion a flex container */
-nav{
-    display:flex;
-    justify-content: flex-end;
+nav {
+  display: flex;
+  justify-content: flex-end;
 }
 /* gives the anchor tags an underline */
-nav a{
-    padding:5px;
-    text-decoration:underline 2px;  
+nav a {
+  padding: 5px;
+  text-decoration: underline 2px;
 }
 /* Moves the list items to an inline display different from default block format */
-nav li{
-    display:inline;
+nav li {
+  display: inline;
 }
 /* Removes list bullet points */
-ul{
-    list-style:none;
+ul {
+  list-style: none;
 }
 /* main section of website bordered out */
-main{
-    border:2px solid #b60386;
+main {
+  border: 2px solid #b60386;
 }
 /* specifying dimensions to image under header */
-.image_background img{
-    position:relative;
-    width:100%;
-    height:170px;
-   
+#pinkback {
+  position: relative;
+  width: 100%;
+  height: 170px;
 }
-.image_background{
-    position:relative;
+.image_background {
+  position: relative;
 }
-.avatar_icon{
-    position:absolute;
-    top:12px;
+.avatar_icon {
+  position: absolute;
+  top: 12px;
 }
 /*selects the sections that are within the class sections of website */
-.sections_of_website section{
-    display:flex;
-    flex-wrap:wrap;
-    margin:10px;
-    border:2px dashed whitesmoke;
+.sections_of_website section {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  border: 2px dashed whitesmoke;
 }
 /*flex items within the class work_content is a column  */
- .work_content{
-    flex-direction:column;
-} 
+.work_content {
+  flex-direction: column;
+}
 /* makes this section a flex container with flex property of row  */
-.multiple_item_row{
-    display:flex;
-    flex-direction:row;
+.multiple_item_row {
+  display: flex;
+  flex-direction: row;
 }
 /* left part of website with h2 within div  */
-.side_content{   
-    margin:5px;
-    width:15%;
-    border:2px dotted purple;
-    color:aqua;
-    background-image: url("./Assets/geomet.jpg");
-    background-size: contain;
- 
+.side_content {
+  margin: 5px;
+  width: 15%;
+  border: 2px dotted purple;
+  color: aqua;
+  background-image: url("./Assets/geomet.jpg");
+  background-size: contain;
 }
 /* divs located to right of class side content of website   */
-.work_content, .about_content, .contact_me_content{    
-    margin:10px;
-    width:80%;
-    padding:15px;
-    display:flex;  
-    border-style: double double double solid;
-    border-left-color: aqua;
+.work_content,
+.about_content,
+.contact_me_content {
+  margin: 10px;
+  width: 80%;
+  padding: 15px;
+  display: flex;
+  border-style: double double double solid;
+  border-left-color: aqua;
 }
 /* height specified for image */
-.sections_of_website img{
-    max-height: 200px;
-    border:2px solid lavender;
+.sections_of_website img {
+  max-height: 200px;
+  border: 2px solid lavender;
 }
 /* div containing the parent of pictures including first picture, second picture and item_1 item_2  initializing position to relative */
-.first_item{
-    position:relative;
-    width:100%;
+.first_item {
+  position: relative;
+  width: 100%;
 }
 
-.first_item_of_LPR{
-  display:block;
-    margin:5px;
-    width:100%;
-
+.first_item_of_LPR {
+  display: block;
+  margin: 5px;
+  width: 100%;
 }
 
-.item_1,.item_2{
-    position:relative;
-    margin:5px;
-    justify-content: space-between;
- 
+.item_1,
+.item_2 {
+  position: relative;
+  margin: 5px;
+  justify-content: space-between;
 }
 /* size demensions declared for image within parent div */
-.project_pic1{  
-    margin:5px;
-    width:100%;
-    height:100%;
-    object-fit:cover;
- 
+.project_pic1 {
+  margin: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
- .project_pic{  
-    width:100%;
-} 
+.project_pic {
+  width: 100%;
+}
 
- .project_pic2{
-    width:500px;
-}  
+.project_pic2 {
+  width: 500px;
+}
 /* setting opacity to image   */
-.project_pic, .project_pic2, .project_pic1{
-    opacity:0.5;
-   
+.project_pic,
+.project_pic2,
+.project_pic1 {
+  opacity: 0.5;
 }
 /* reverts opacity on image to parents opacity, in this case no opacity */
-.project_pic:hover, .project_pic1:hover, .project_pic2:hover{
-    opacity: initial;
+.project_pic:hover,
+.project_pic1:hover,
+.project_pic2:hover {
+  opacity: initial;
 }
 /* Purple background text displayed on photos*/
-.text_box_tag{
-    background-color: blueviolet;
-    position:absolute;
-    padding:10px;
-    bottom:20%;
-    left:.5%;
-   
+.text_box_tag {
+  background-color: blueviolet;
+  position: absolute;
+  padding: 10px;
+  bottom: 20%;
+  left: 0.5%;
 }
 
 /*list within contact me section set as flex container  */
-.social_contacts{
-    display:flex;
-    justify-content:center; 
-    gap:1rem;
-    margin-top:.5rem; 
+.social_contacts {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 0.5rem;
 }
 
 /* dimension to the image placed within anchor tag  */
-.social_contacts img{
-    display:block;
-    height:24px;
-    width:24px;
-
+.social_contacts img {
+  display: block;
+  height: 24px;
+  width: 24px;
 }
 
 @media screen and (max-width: 860px) {
-    /*displays content as block  */
-    .multiple_item_row{
-        display:block;
-    
-    }
-    /*resizes font to fit accordingly  */
-    .text_box_tag{
-        font-size:15px;
-    }
-    /* changes to fit width size */
-    .side_content{
-        flex:100%;
-        height:50px;
-
-    }
-    /* centers content */
-    .sections_of_website section{
-        justify-content: center;
-    }
-    /*changes content to column display from default inline display*/
-    header{
-       flex-direction:column;
-     
-    }
-    /* width of divs within header to a width suitable to smaller website size */
-    .name_tag, .nav_container{  
-         width:95%;
-    }  
-    
+  /*displays content as block  */
+  .multiple_item_row {
+    display: block;
+  }
+  /*resizes font to fit accordingly  */
+  .text_box_tag {
+    font-size: 15px;
+  }
+  /* changes to fit width size */
+  .side_content {
+    flex: 100%;
+    height: 50px;
+  }
+  /* centers content */
+  .sections_of_website section {
+    justify-content: center;
+  }
+  /*changes content to column display from default inline display*/
+  header {
+    flex-direction: column;
+  }
+  /* width of divs within header to a width suitable to smaller website size */
+  .name_tag,
+  .nav_container {
+    width: 95%;
+  }
 }
 /* parent */
-.container{
-    display:flex;
-   
-
+.container {
+  display: flex;
 }
-.holdimg img{
-    width:20px;
-    height:20px;
-
+.holdimg img {
+  width: 20px;
+  height: 20px;
 }
-.holdimg{
-    display:flex;
-    justify-content: flex-start;
+.holdimg {
+  display: flex;
+  justify-content: flex-start;
 }
-.centereddiv{
-    display:flex;
-    justify-content: center;
+.centereddiv {
+  display: flex;
+  justify-content: center;
+}
+#redpic {
+  position: absolute;
+  width: 130px;
+  top: 20px;
 }
 /* div holding img child of conatiner */
 
@@ -217,6 +216,3 @@ main{
 /* .container div{
   
 } */
-
-
-  
